--- a/index.html
+++ b/index.html
@@ -14,36 +14,41 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 <body>
-  <header>
-    <h1>Fun Bus</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
-
-  <div id="fun-bus">
-    <img src="img/fun-bus.jpg">
-    <h2>Welcome To Fun Bus!</h2>
-    <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty
-      simple traveling fun WordPress wanderlust darn simple organized. Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty
-      simple traveling fun WordPress wanderlust darn simple organized.</p>
-    </div>
 
   <div class="container home">
 
     <section class="content-section">
+
+      <header>
+        <h1>Fun Bus</h1>
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">About Us</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </nav>
+      </header>
+
+      <div id="fun-bus">
+        <img src="img/fun-bus.jpg">
+        <h2>Welcome To Fun Bus!</h2>
+        <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty
+          simple traveling fun WordPress wanderlust darn simple organized. Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty
+          simple traveling fun WordPress wanderlust darn simple organized.</p>
+        </div>
       
       <div class="text-content">
+        <section class="letsGo">
         <h2>Let's Go!</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty
           simple traveling fun WordPress wanderlust darn simple organized.</p>
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website
           theme.</p>
+          </section>
       </div>
       <div class="img-content">
         <img src="img/adventure.jpg" alt="Let's go on an adventure!">
